--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appnope==0.1.2
 asttokens==2.0.5
 astunparse==1.6.3
 backcall==0.2.0
+black==22.3.0
 cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -37,14 +38,17 @@ Keras-Preprocessing==1.1.2
 libclang==13.0.0
 Markdown==3.3.6
 matplotlib-inline==0.1.3
+mypy-extensions==0.4.3
 nest-asyncio==1.5.4
 numpy==1.22.3
 oauthlib==3.2.0
 opt-einsum==3.3.0
 parso==0.8.3
+pathspec==0.9.0
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
+platformdirs==2.5.1
 promise==2.3
 prompt-toolkit==3.0.28
 protobuf==3.19.4
@@ -76,6 +80,7 @@ tensorflow-io-gcs-filesystem==0.24.0
 tensorflow-metadata==1.7.0
 termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
+tomli==2.0.1
 tornado==6.1
 tqdm==4.63.1
 traitlets==5.1.1
