--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.0
+cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
 dill==0.3.4
@@ -15,6 +16,7 @@ docker-pycreds==0.4.0
 entrypoints==0.4
 executing==0.8.3
 flatbuffers==2.0
+fonttools==4.31.2
 gast==0.5.3
 gitdb==4.0.9
 GitPython==3.1.27
@@ -35,19 +37,23 @@ jupyter-client==7.2.0
 jupyter-core==4.9.2
 keras==2.8.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
 libclang==13.0.0
 Markdown==3.3.6
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mypy-extensions==0.4.3
 nest-asyncio==1.5.4
 numpy==1.22.3
 oauthlib==3.2.0
 opt-einsum==3.3.0
+packaging==21.3
 parso==0.8.3
 pathspec==0.9.0
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.0.1
 platformdirs==2.5.1
 promise==2.3
 prompt-toolkit==3.0.28
@@ -58,6 +64,7 @@ pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 Pygments==2.11.2
+pyparsing==3.0.7
 python-dateutil==2.8.2
 PyYAML==6.0
 pyzmq==22.3.0
